Added view and template for detailed blog post as well as CSS for the site.

--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -1,5 +1,5 @@
 .page-header {
-    background-color: #ff9400;
+    background-color: #90C3D4;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -15,7 +15,7 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Pacifico', cursive;
 }
 
 .date {
@@ -42,5 +42,10 @@ h1, h2, h3, h4 {
 }
 
 .post h1 a, .post h1 a:visited {
-    color: #000000;
+    color: #074F4A;
+}
+
+.myclass {
+    font-family: 'Amatic SC', cursive;
+    font-size: 26pt;
 }
