--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -8,6 +8,8 @@
     <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
     <div class="myclass">
         <p>{{ post.text|linebreaksbr }}</p>
+        <img src="{{ post.image }}" >
+
     </div>
 </div>
 {% endfor %}
