--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -1,16 +1,15 @@
 {% extends 'blog/base.html' %}
 {% block content %}
-{% for post in posts %}
-<div class="post">
-    <div class="date">
-        <p>Опубликовано: {{ post.published_date }}</p>
-    </div>
-    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-    <div class="myclass">
-        <p>{{ post.text|linebreaksbr }}</p>
-        <img src="{{ post.image.url }}" >
-
-    </div>
-</div>
-{% endfor %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                <p>Опубликовано: {{ post.published_date }}</p>
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <div class="myclass">
+                <p>{{ post.text|linebreaksbr }}
+                <img src="{{ post.image.url }}" width="100%"></p>
+            </div>
+        </div>
+    {% endfor %}
 {% endblock %}
