--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -8,7 +8,9 @@
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <div class="myclass">
                 <p>{{ post.text|linebreaksbr }}
-                <img src="{{ post.image.url }}" width="100%"></p>
+                    {% if post.image %}
+                        <img src="{{ post.image.url }}" width="100%"></p>
+                    {% endif %}
             </div>
         </div>
     {% endfor %}
