--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -11,6 +11,12 @@
             <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         {% endif %}
         <h1>{{ post.title }}</h1>
-        <p>{{ post.text|linebreaksbr }}</p>
+        <div class="myclass">
+        <p>{{ post.text|linebreaksbr }}
+            {% if post.image %}
+                <img src="{{ post.image.url }}" width="100%"></p>
+            {% endif %}
+        </div>>
+
     </div>
 {% endblock %}
