--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -16,7 +16,7 @@
             {% if post.image %}
                 <img src="{{ post.image.url }}" width="100%"></p>
             {% endif %}
-        </div>>
+        </div>
 
     </div>
 {% endblock %}
