--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -12,11 +12,11 @@
 <div class="page-header">
     {% if user.is_authenticated %}
         <p>Hi {{ user.username }}!</p>
-        <p><a href="{% url 'logout' %}">logout</a></p>
+        <a href="{% url 'logout' %}" class="top-menu"><span class="glyphicon glyphicon-log-out"></span></a>
         <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
     {% else %}
-        <p>You are not logged in</p>
-        <a href="{% url 'login' %}">login</a>
+        <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-log-in"></span></a>
+        <a href="{% url 'signup' %}" class="top-menu"><span class="glyphicon glyphicon-plus-sign"></span></a>
     {% endif %}
     <h1><a href="/">Django Girls Blog</a></h1>
 </div>
